# Gnod_Project

./: README.md  pyproject.toml  requirements.txt
01_data/: df_playlist_new.csv  spotify_pop_songs_1000_cluster.csv  spotify_pop_songs_1000_rows.csv  spotify_songs_5000_cluster.csv
02_notebooks/: Project_week10.ipynb  Project_week10_nicole.ipynb  config.py  functions.py
03_models/: kmeans.pkl
04_streamlit/: app_main.py  functions.py  kmeans.pkl  scaler.pkl
