[project]
name = "gnod-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "streamlit>=1.39.0",
    "spotipy>=2.24.0",
    "pandas>=2.2.3",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
